<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_settings">
        <menu>
            <item android:id="@+id/menu_settings_image" android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_settings_image" />
            <item android:id="@+id/menu_settings_contact" android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_settings_contact" />
            <item android:id="@+id/menu_settings_timer" android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings_timer" />
            <item android:id="@+id/menu_settings_loudness" android:icon="@android:drawable/ic_btn_speak_now"
                android:title="@string/menu_settings_loudness" />
        </menu>
    </item>
    <item android:title="@string/menu_actions">
        <menu>
            <!--<item android:id="@+id/menu_action_call" android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_action_call" />-->
            <item android:id="@+id/menu_action_restart" android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_action_restart" />
            <item android:id="@+id/menu_action_stop" android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_action_stop"/>
        </menu>
    </item>
</menu>
