<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="0dp" android:id="@+id/tv_dialog_loudness" android:gravity="right" android:layout_marginRight="10dp"
            android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/dialog_label_loudness"/>
        <EditText
            android:layout_width="0dp" android:id="@+id/et_dialog_loudness" android:gravity="left" android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" android:layout_weight="1" android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_marginTop="5dp" android:orientation="horizontal">
        <Button
            android:layout_width="0dp" android:text="@string/btn_dialog_discard" android:gravity="center"
            android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/btn_dialog_loudness_discard"/>
        <Button
            android:layout_width="0dp" android:text="@string/btn_dialog_save" android:gravity="center"
            android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/btn_dialog_loudness_save"/>
    </LinearLayout>
</LinearLayout>
